renamed href path for css

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8" />
   <title>Portfollio Cover Site</title>
 
-  <link rel="stylesheet" type="text/css" href="assets/style.css" />
-  <title>Professional Portfollio</title>
+  <link rel="stylesheet" type="text/css" href="./Assets/style.css">
 </head>
 
 <body>
