had to rename path to image and adjust form of box 4

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <a id="picture">
           <h3>Picture</h3>
         </a>
-        <img src="assets/images/picture of me.jpg" alt="Picture of Me">
+        <img src="./Assets/Images/Picture of Me.jpg" alt="Picture of Me">
       </div>
 
       <div class="box-2">
@@ -78,8 +78,8 @@
         <ul>
           <h4><span class="label">Cell Phone:</span> 503.781.1685</h4>
           <h4><span class="label">Email:</span> ksbuoregon@gmail.com</h4>
-          <h4><span class="label">LinkedIn:</span><br class="indent">
-            <p align=right>linkedin.com/in/kimberly-brown-70a15a93</p>
+          <h4><span class="label">LinkedIn:</span><br>
+            <p class="linkedIn">linkedin.com/in/kimberly-brown-70a15a93</p>
           </h4>
           <h4><span class="label">Github:</span> coming soon</h4> <br>
         </ul>
@@ -93,7 +93,7 @@
         <a id="web-design-1">
           <h3>Best Lakes with Campgrounds on Mt. Hood</h3>
         </a>
-        <img src="assets/images/Mt Hood Jonsrud.jpg" float=left alt="Picture of Mt. Hood">
+        <img src="./Assets/Images/Mt Hood Jonsrud.jpg" alt="Picture of Mt. Hood" class="hood">
         <div class="child-1">
           <ol>
             <li>Lost Lake</li>
